# Jupityr

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.claude/: hooks  settings.json
.claude/skills/code-review/: SKILL.md
.claude/skills/refactor/: SKILL.md
.claude/skills/release/: SKILL.md
agentforge/: .env.example  CONTRIBUTING.md  README.md  package-lock.json  package.json
agentforge/.github/workflows/: ci.yml
agentforge/docker/: Dockerfile  Dockerfile.worker  docker-compose.yml  init-db.sql
agentforge/prisma/: schema.prisma
agentforge/prisma/migrations/: 0001_enable_pgvector.sql
agentforge/src/: middleware.ts
agentforge/src/app/: globals.css  layout.tsx
agentforge/src/components/: action-form.tsx  action-list.tsx  agent-settings-form.tsx  analytics-charts.tsx  api-key-settings.tsx  chat-interface.tsx  integration-config.tsx  leads-table.tsx  sidebar.tsx
agentforge/src/lib/: action-executor.ts  actions.ts  api-auth.ts  auth-utils.ts  auth.ts  chunker.ts  classify.ts  crawler.ts  embeddings.ts  encryption.ts  ingest.ts  (+9 more)
agentforge/widget/: build.js  package.json
docs/: architecture.md
examples/: automation_example.yaml  corpus_example.yaml
fashion_affiliate/: .gitignore  README.md  app.py
fashion_affiliate/templates/: base.html  category.html  index.html  product_detail.html  products.html
jupityr/: __init__.py
jupityr/config/: __init__.py  loader.py
jupityr/core/: __init__.py
jupityr/gamification/: __init__.py
src/api/: CLAUDE.md
src/persistence/: CLAUDE.md
(+61 files in other folders)
